# RISCVemu

./: .clang-format  .config  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  README_CN.MD  config.h.in
include/: basic_instructions.h  config.h  debugger.h  disasm.h  emu.h  exec.h  fmap.h  hashmap_u32.h  logger.h  mem.h  op.h  ops.h
include/device/: uart.h
include/extension/: a_extension.h  c_extension.h  f_extension.h  m_extension.h  system.h  zicsr_extension.h  zifencei_extension.h
run/: build_tests.sh  compile_run.sh  link.ld  run.c  run_tests.sh
src/: debugger.c  disasm.c  emu.c  exec.c  fmap.c  hashmap_u32.c  logger.c  mem.c  op.c  ops.c
src/extension/: m_extension.c  system.c  zicsr_extension.c  zifencei_extension.c
test/: link.ld  mktest.sh  test.c
